2023-10-11T16:12:36Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6485202894 # 1975
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-11
* notice: last 14d: unq all: 87 244
* notice: prev accum: outdated-unq outdated-all / unq all: 1683 5299 / 1806 5543
* notice: next accum: outdated-unq outdated-all / unq all: 1683 5299 / 1806 5544
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +6 +8 -0 -0 / 6 8
* notice: removed / changed dates: [] / [2023-10-11]

2023-10-11T08:12:40Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6479775860 # 1974
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-11
* notice: last 14d: unq all: 87 243
* notice: prev accum: outdated-unq outdated-all / unq all: 1683 5299 / 1800 5536
* notice: next accum: outdated-unq outdated-all / unq all: 1683 5299 / 1806 5543
* notice: prev exec diff / last date diff / accum: unq all: +6 +7 -0 -1 / +6 +7 -0 -0 / 6 7
* notice: removed / changed dates: [] / [2023-09-27 2023-10-11]

2023-10-11T00:43:06Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6476464632 # 1973
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-11
* notice: last 14d: unq all: 84 237
* notice: prev accum: outdated-unq outdated-all / unq all: 1683 5299 / 1796 5530
* notice: next accum: outdated-unq outdated-all / unq all: 1683 5299 / 1800 5536
* notice: prev exec diff / last date diff / accum: unq all: +4 +6 -0 -0 / +16 +23 -0 -0 / 16 23
* notice: removed / changed dates: [] / [2023-10-10]

2023-10-10T16:12:39Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6471973803 # 1972