@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-10-11T16:12:36Z",
-  "count_outdated" : 5299,
-  "uniques_outdated" : 1683,
+  "timestamp" : "2023-10-12T00:41:27Z",
+  "count_outdated" : 5301,
+  "uniques_outdated" : 1684,
   "count" : 5544,
   "uniques" : 1806,
   "clones" : [
-    {
-      "timestamp": "2023-09-27T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-09-28T00:00:00Z",
       "count": 9,
